--- a/Pages/CarbonFootprint.razor
+++ b/Pages/CarbonFootprint.razor
@@ -4,16 +4,14 @@
 <RadzenText Text="Carbon Footprint" TextStyle="TextStyle.H3" TagName="TagName.H1" style="margin: 0" />
 <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger" Visible="@errorVisible" AllowClose="false">@errorMessage</RadzenAlert>
 
-<div class="rz-m-12">
     <RadzenProgressBar Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" Visible="@busy" />
     <RadzenDropDown TValue="string" Value=@selectedYear Data=@yearsStr Change="@(args => UpdateChart(args.ToString()))" Style="width: 100%; max-width: 100%;"/>
     <RadzenChart Style="height: 50rem" >
-        <RadzenPieSeries Data="@data" Title="Activities" CategoryProperty="Category" ValueProperty="Value">
+        <RadzenPieSeries Data="@data" Title="CO2 Emission" CategoryProperty="Category" ValueProperty="Value" >
             <RadzenSeriesDataLabels Visible="false" />
         </RadzenPieSeries>
-        <RadzenLegend Position="LegendPosition.Right" />
+        <RadzenLegend Position="LegendPosition.Bottom" />
     </RadzenChart>
-</div>
     
 
 
@@ -73,17 +71,6 @@
             yearsStr = activities.OrderByDescending(a => a.Year).Select(a => a.YearStr);
 
             members = Preferences.Default.Get("members", 1);
-            activities.ForEach(record => record.BeefEmissionPc = record.BeefEmission / members);
-            activities.ForEach(record => record.CoffeeEmissionPc = record.CoffeeEmission / members);
-            activities.ForEach(record => record.LampEmissionPc = record.LampEmission / members);
-            activities.ForEach(record => record.PorkEmissionPc = record.PorkEmission / members);
-            activities.ForEach(record => record.MilkEmissionPc = record.MilkEmission / members);
-            activities.ForEach(record => record.PoultryEmissionPc = record.PoultryEmission / members);
-            activities.ForEach(record => record.EggsEmissionPc = record.EggsEmission / members);
-            activities.ForEach(record => record.CheeseEmissionPc = record.CheeseEmission / members);
-            activities.ForEach(record => record.ChocolateEmissionPc = record.ChocolateEmission / members);
-            activities.ForEach(record => record.RiceEmissionPc = record.RiceEmission / members);
-            activities.ForEach(record => record.OliverOilEmissionPc = record.OliverOilEmission / members);
 
             UpdateChart(selectedYear);
             visuVisible = true;
@@ -113,57 +100,57 @@
             new DataItem
             {
                 Category = "Beef",
-                Value = selectedYearData.BeefEmissionPc
+                Value = selectedYearData.BeefEmission
             },
             new DataItem
             {
                 Category = "Lamp",
-                Value = selectedYearData.LampEmissionPc
+                Value = selectedYearData.LampEmission
             },
             new DataItem
             {
                 Category = "Pork",
-                Value = selectedYearData.PorkEmissionPc
+                Value = selectedYearData.PorkEmission
             },
             new DataItem
             {
                 Category = "Poultry",
-                Value = selectedYearData.PoultryEmissionPc
+                Value = selectedYearData.PoultryEmission
             },
             new DataItem
             {
                 Category = "OliverOil",
-                Value = selectedYearData.OliverOilEmissionPc
+                Value = selectedYearData.OliverOilEmission
             },
             new DataItem
             {
                 Category = "Coffee",
-                Value = selectedYearData.CoffeeEmissionPc
+                Value = selectedYearData.CoffeeEmission
             },
             new DataItem
             {
                 Category = "Cheese",
-                Value = selectedYearData.CheeseEmissionPc
+                Value = selectedYearData.CheeseEmission
             },
             new DataItem
             {
                 Category = "Chocolate",
-                Value = selectedYearData.ChocolateEmissionPc
+                Value = selectedYearData.ChocolateEmission
             },
             new DataItem
             {
                 Category = "Rice",
-                Value = selectedYearData.RiceEmissionPc
+                Value = selectedYearData.RiceEmission
             },
             new DataItem
             {
                 Category = "Milk",
-                Value = selectedYearData.MilkEmissionPc
+                Value = selectedYearData.MilkEmission
             },
             new DataItem
             {
                 Category = "Eggs",
-                Value = selectedYearData.EggsEmissionPc
+                Value = selectedYearData.EggsEmission
             },
         };
 
