Set button bigger

--- a/Pages/BillPages/Bills.razor
+++ b/Pages/BillPages/Bills.razor
@@ -33,7 +33,7 @@
     </RadzenRow>
 </RadzenStack>
 
-<RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Light" Visible="@tipVisible" AllowClose="true">@tipMessage</RadzenAlert>
+<RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Light" Visible="@tipVisible" AllowClose="true" Style="margin-top: 2rem">@tipMessage</RadzenAlert>
 
 
 
