--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -26,7 +26,7 @@
     <RadzenValueAxis Min="0" />
 </RadzenChart>
 
-<RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Light" Visible="@tipVisible" AllowClose="true">@tipMessage</RadzenAlert>
+<RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Light" Visible="@tipVisible" AllowClose="true" Style="margin-top: 2rem">@tipMessage</RadzenAlert>
 
 
 @code{
