--- a/Pages/ActivityPages/EditActivity.razor
+++ b/Pages/ActivityPages/EditActivity.razor
@@ -18,10 +18,10 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
             <RadzenColumn>
-                <RadzenLabel Text="Lamp" Component="Lamp" style="width: 100%" />
+                <RadzenLabel Text="Lamb" Component="Lamb" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn>
-                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Lamp" Name="Lamp" ShowUpDown="false" />
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Lamb" Name="Lamb" ShowUpDown="false" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
