--- a/Pages/BillPages/Bills.razor
+++ b/Pages/BillPages/Bills.razor
@@ -3,9 +3,10 @@
 <PageTitle>Bills</PageTitle>
 <RadzenStack>
     <RadzenRow AlignItems="AlignItems.Center">
-        <RadzenColumn Size="12" SizeMD="6">
-            <RadzenText Text="My Bills" TextStyle="TextStyle.H3" TagName="TagName.H1" style="margin: 0" />
-        </RadzenColumn>
+        <RadzenText Text="My Bills" TextStyle="TextStyle.H3" TagName="TagName.H1" style="margin: 0" />
+        <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H1" style="margin: 0" >
+            <a style="text-decoration: underline;" @onclick="visulizationClicked">Click me</a> to see the visualization
+        </RadzenText>
         <RadzenColumn Size="12" SizeMD="6">
             <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.End" Gap="0.5rem">
                 <RadzenButton Icon="add_circle_outline" Text="Add" Click="@AddButtonClick" Variant="Variant.Flat" />
@@ -40,9 +41,6 @@
 @code {
     [Inject]
     protected IJSRuntime JSRuntime { get; set; }
-
-    [Inject]
-    protected NavigationManager NavigationManager { get; set; }
 
     [Inject]
     protected DialogService DialogService { get; set; }
@@ -133,5 +131,10 @@
                     Detail = ex.Message
                 });
         }
+    }
+
+    void visulizationClicked()
+    {
+        navigation.NavigateTo("/");
     }
 }
