--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Comparison
+                <span class="oi oi-home" aria-hidden="true"></span> Community Comparison
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -31,11 +31,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="settings">
-                <span class="oi oi-people" aria-hidden="true"></span> User Profile
+                <span class="oi oi-people" aria-hidden="true"></span> My Profile
             </NavLink>
         </div>
     </nav>
 </div>
+
 
 @code {
     private bool collapseNavMenu = true;
