--- a/Pages/ActivityPages/EditActivity.razor
+++ b/Pages/ActivityPages/EditActivity.razor
@@ -58,10 +58,10 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
             <RadzenColumn>
-                <RadzenLabel Text="Oliver Oil" Component="OliverOil" style="width: 100%" />
+                <RadzenLabel Text="Olive Oil" Component="OliveOil" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn>
-                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.OliverOil" Name="OliverOil" ShowUpDown="false" />
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.OliveOil" Name="OliveOil" ShowUpDown="false" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
