--- a/Pages/CarbonFootprint.razor
+++ b/Pages/CarbonFootprint.razor
@@ -135,8 +135,8 @@
             },
             new DataItem
             {
-                Category = "OliverOil",
-                Value = selectedYearData.OliverOilEmission
+                Category = "OliveOil",
+                Value = selectedYearData.OliveOilEmission
             },
             new DataItem
             {
