--- a/Pages/ActivityPages/EditActivity.razor
+++ b/Pages/ActivityPages/EditActivity.razor
@@ -14,6 +14,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Beef" Name="Beef" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Beef" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -22,6 +23,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Lamb" Name="Lamb" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Lamb" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -30,6 +32,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Pork" Name="Pork" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Pork" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -38,6 +41,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Poultry" Name="Poultry" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Poultry" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -46,6 +50,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Coffee" Name="Coffee" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Coffee" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -54,6 +59,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Milk" Name="Milk" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Milk" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -62,6 +68,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.OliveOil" Name="OliveOil" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="OliveOil" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -70,6 +77,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Cheese" Name="Cheese" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Cheese" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -78,6 +86,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Eggs" Name="Eggs" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Eggs" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -86,6 +95,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Rice" Name="Rice" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Rice" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 0.2rem">
@@ -94,6 +104,7 @@
             </RadzenColumn>
             <RadzenColumn>
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Chocolate" Name="Chocolate" ShowUpDown="false" />
+                <RadzenNumericRangeValidator Component="Chocolate" Min="0" Text="Value must be positive or zero." />
             </RadzenColumn>
         </RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.End" Gap="0.5rem">
