Change name of alert

--- a/Pages/CarbonFootprint.razor
+++ b/Pages/CarbonFootprint.razor
@@ -88,10 +88,10 @@
         }
         else
         {
-            errorMessage = "No Activity Record data";
+            errorMessage = "No Activity data";
             alertLink = "Click me to add Activity records";
             pageUrl = "/activities";
-            pageName = "My Activities";
+            pageName = "\"My Activities\"";
             errorVisible = true;
         }
         busy = false;
