--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -111,7 +111,7 @@
         }
         else
         {
-            errorMessage = "No Bill Record data";
+            errorMessage = "No Bill data";
             alertLink = "Click me to add Bill records";
             pageUrl = "/bills";
             pageName = "\"My Bills\"";
